crates/kgr/tests/snapshots/snapshots__snap_js_mixed_dot.snap
---
source: crates/kgr/tests/snapshots.rs
expression: stdout
---
digraph kgr {
  rankdir=LR;
  node [shape=box fontname="monospace" fontsize=10];
  edge [arrowsize=0.6];

  "app.mjs" [label="app.mjs" color="#f7df1e"];
  "helper.js" [label="helper.js" color="#f7df1e"];

  "app.mjs" -> "helper.js";
}
