crates/kgr/tests/snapshots/snapshots__snap_js_mixed_mermaid.snap
---
source: crates/kgr/tests/snapshots.rs
expression: stdout
---
graph LR
  n0["app.mjs"]
  n1["helper.js"]

  n0 --> n1
