crates/kgr/tests/snapshots/snapshots__snap_js_mixed_tree.snap
---
source: crates/kgr/tests/snapshots.rs
expression: stdout
---
app.mjs  [entry]
└── helper.js
