crates/kgr/tests/snapshots/snapshots__snap_js_simple_mermaid.snap
---
source: crates/kgr/tests/snapshots.rs
expression: stdout
---
graph LR
  n0["index.js"]
  n1["utils.js"]

  n0 --> n1
