crates/kgr/tests/snapshots/snapshots__snap_js_simple_table.snap
---
source: crates/kgr/tests/snapshots.rs
expression: stdout
---
FILE                                               LANG         LOCAL-IN LOCAL-OUT   EXT  CYCLES STATUS
---------------------------------------------------------------------------------------------------------
index.js                                           javascript        0         1     0       — entry
utils.js                                           javascript        1         0     0       — —
