crates/kgr/tests/snapshots/snapshots__snap_js_simple_tree.snap
---
source: crates/kgr/tests/snapshots.rs
expression: stdout
---
index.js  [entry]
└── utils.js
