crates/kgr/tests/snapshots/snapshots__snap_python_cycle_check.snap
---
source: crates/kgr/tests/snapshots.rs
assertion_line: 129
expression: stderr
---
error[kgr::cycle]: Circular dependency detected
  c.py -> b.py -> a.py -> c.py (cycle)

warning[kgr::orphan]: Orphaned files (no imports, not imported):
  __init__.py
